@@ -20,6 +20,7 @@ Not yet released
 		- /dir/.bg-100.jpg is the directory icon
 	- Tidied up whitespace and odd bits of style
 	- Fixed some bugs
+	- OpenGraph metadata <http://ogp.me/>
 
 1.1 Sun Aug  5 23:48:30 BST 2012
 
